--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <h1>John Word</h1>
 <h2>Senior Portfolio</h2>
 <h3>Projects</h3>
+  <img src="MusicPlayer1.PNG" width="300px"/>
 <h3>Skills</h3>
   <ul>
     <li></li>
